[Fixed] Missing padding & margin for spans of code (not code block)

--- a/css/style.css
+++ b/css/style.css
@@ -368,12 +368,14 @@ a {
 }
 #post-content code:not(.hljs),
 #post-content tt {
-    margin: 0;
-    padding: 0;
+    padding: 0 5px;
+    margin: 0 2px;
     background-color: rgba(0, 0, 0, 0.04);
     border-radius: 3px;
 }
 #post-content pre>code {
+    padding: 0 !important;
+    margin: 0 !important;
     background-color: rgba(0, 0, 0, 0) !important;
     white-space: pre;
     border: none;
